Fix #14, labelAlign to right

--- a/resources/css/ext-mirror.css
+++ b/resources/css/ext-mirror.css
@@ -400,6 +400,16 @@ table.x-datepicker-inner th {
     text-align: left;
 }
 
+/* Charts */
+.x-surface svg {
+    direction: ltr;
+}
+
+/* Label */
+.x-form-item-label-right {
+    text-align: left;
+}
+
 /* Internet Explorer */
 /* Buttons */
 .x-nbr .x-btn-tl {
@@ -444,8 +454,4 @@ table.x-datepicker-inner th {
 
 .x-nbr .x-tab-close-btn {
     right: auto;
-}
-/* Charts */
-.x-surface svg {
-    direction: ltr;
 }
